CSS fix - scrollbar on output terminal overflow-y property set to auto instead of scroll

--- a/apps/docs/styles/global.css
+++ b/apps/docs/styles/global.css
@@ -53,7 +53,7 @@ html {
 }
 
 .terminal {
-  overflow-y: scroll;
+  overflow-y: auto;
   transition-property: max-height, padding; 
 	transition-duration: 0.2s;
 	transition-timing-function: ease-in-out;
